RESOLVED FIXED98313
ScrollingStateNode should keep a Vector of children instead of child pointers
https://bugs.webkit.org/show_bug.cgi?id=98313
Summary ScrollingStateNode should keep a Vector of children instead of child pointers
Beth Dakin
Reported 2012-10-03 15:52:49 PDT
ScrollingStateNode was added with https://bugs.webkit.org/show_bug.cgi?id=97365 We can vastly simplify that class by making each node have a Vector of children instead of of keeping child and sibling pointers.
Attachments
Patch (10.85 KB, patch)
2012-10-03 16:02 PDT, Beth Dakin
simon.fraser: review+
Beth Dakin
Comment 1 2012-10-03 16:02:44 PDT
Simon Fraser (smfr)
Comment 2 2012-10-03 16:12:17 PDT
Comment on attachment 166983 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=166983&action=review > Source/WebCore/ChangeLog:17 > + (WebCore): (WebCore): > Source/WebCore/page/scrolling/ScrollingStateNode.h:81 > + Vector<OwnPtr<ScrollingStateNode> > m_children; Maybe use a Vector* since many nodes won't have children.
Beth Dakin
Comment 3 2012-10-03 16:36:26 PDT
(In reply to comment #2) > (From update of attachment 166983 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=166983&action=review > > > Source/WebCore/ChangeLog:17 > > + (WebCore): > > (WebCore): > > > Source/WebCore/page/scrolling/ScrollingStateNode.h:81 > > + Vector<OwnPtr<ScrollingStateNode> > m_children; > > Maybe use a Vector* since many nodes won't have children. Thanks Simon! I took care of both. http://trac.webkit.org/changeset/130342
Rafael Brandao
Comment 4 2013-02-15 03:02:24 PST
I believe this bug is fixed. Closing it.
Note You need to log in before you can comment on or make changes to this bug.