Source/WebCore/page/scrolling/ScrollingStateTree.cpp
@@ -47,72 +47,8 @@ ScrollingStateTree::~ScrollingStateTree()
 
 PassOwnPtr<ScrollingStateTree> ScrollingStateTree::commit()
 {
-    // This function clones the entire ScrollingStateTree.
     OwnPtr<ScrollingStateTree> treeState = ScrollingStateTree::create();
-
-    // currentNode is the node that we are currently cloning.
-    ScrollingStateNode* currentNode = m_rootStateNode.get();
-
-    // nextNode represents the nextNode we will clone. Some tree traversal is required to find it.
-    ScrollingStateNode* nextNode = 0;
-
-    // As we clone each node, we want to set the cloned nodes relationship pointers to the corresponding
-    // cloned nodes in the clone tree. In order to do that, we need to keep track of the appropriate
-    // nodes.
-    ScrollingStateNode* cloneParent = 0;
-    ScrollingStateNode* clonePreviousSibling = 0;
-
-    // Now traverse the tree and clone each node.
-    while (currentNode) {
-        PassOwnPtr<ScrollingStateNode> cloneNode = currentNode->cloneNode();
-
-        // Set relationships for the newly cloned node.
-        cloneNode->setScrollingStateTree(treeState.get());
-        cloneNode->setParent(cloneParent);
-        if (cloneParent) {
-            if (!cloneParent->firstChild())
-                cloneParent->setFirstChild(cloneNode);
-            if (clonePreviousSibling)
-                clonePreviousSibling->setNextSibling(cloneNode);
-        }
-
-        // Now find the next node, and set up the cloneParent and clonePreviousSibling pointer appropriately.
-        if (currentNode->firstChild()) {
-            nextNode = currentNode->firstChild();
-            cloneParent = cloneNode.get();
-            clonePreviousSibling = 0;
-        } else if (currentNode->nextSibling()) {
-            nextNode = currentNode->nextSibling();
-            cloneParent = cloneNode->parent();
-            clonePreviousSibling = cloneNode.get();
-        } else {
-            // If there is no first child and no next sibling, then we have to traverse up and over in the tree.
-            nextNode = 0;
-            ScrollingStateNode* traversalNode = currentNode;
-            ScrollingStateNode* cloneTraversalNode = cloneNode.get();
-            clonePreviousSibling = 0;
-            while (!nextNode) {
-                traversalNode = traversalNode->parent();
-                cloneTraversalNode = cloneTraversalNode->parent();
-                if (!traversalNode) {
-                    nextNode = 0;
-                    break;
-                }
-                nextNode = traversalNode->nextSibling();
-                clonePreviousSibling = cloneTraversalNode;
-                cloneParent = clonePreviousSibling ? clonePreviousSibling->parent() : 0;
-            }
-        }
-
-        if (currentNode == m_rootStateNode)
-            treeState->setRootStateNode(static_pointer_cast<ScrollingStateScrollingNode>(cloneNode));
-
-        // Before we move on, reset all of our indicators that properties have changed on the original tree.
-        currentNode->setScrollLayerDidChange(false);
-        currentNode->resetChangedProperties();
-
-        currentNode = nextNode;
-    }
+    treeState->setRootStateNode(static_pointer_cast<ScrollingStateScrollingNode>(m_rootStateNode->cloneAndResetNode()));
 
     // Now the clone tree has changed properties, and the original tree does not.
     treeState->setHasChangedProperties(true);
